Update sidebar navigation from 'Team' to 'Business' to better reflect page functionality
- Changed navigation label from t('team') to t('business')
- Updated translations in all languages (French: Entreprise, Arabic: الشركة, English: Business)
- Page now properly represents its dual purpose: business info management AND team member management

--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -3,7 +3,8 @@
   "clients": "العملاء",
   "invoices": "الفواتير",
   "export": "تصدير",
-  "team": "الفريق",
+  "team": "الشركة",
+  "business": "الشركة",
   "logout": "تسجيل الخروج",
   "name": "الاسم",
   "phone": "الهاتف",
