--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -3,7 +3,8 @@
   "clients": "Clients",
   "invoices": "Invoices",
   "export": "Export",
-  "team": "Team",
+  "team": "Business",
+  "business": "Business",
   "logout": "Logout",
   "name": "Name",
   "phone": "Phone",
