--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -3,7 +3,8 @@
   "clients": "Clients",
   "invoices": "Factures",
   "export": "Exporter",
-  "team": "Équipe",
+  "team": "Entreprise",
+  "business": "Entreprise",
   "logout": "Déconnexion",
   "name": "Nom",
   "phone": "Téléphone",
